Updated routes
Added GET /doctor which returns the currently logged in doctor

Updated PUT /doctor/:id  ->  PUT /doctor which updates the currently logged in doctor instead of the given doctor (more secure)
